--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ permalink:        pretty
 relative_permalinks: true
 
 # Setup
-title:            Poole
-tagline:          The Jekyll Butler
-url:              http://getpoole.com
+title:            BuildMill
+tagline:          
+url:              http://buildmill.org
 paginate:         1
 baseurl:          /
 author:
